Zero variant broken after 8189170 and 8189871

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b34
    • generic
    • linux

      After 8189170 and 8189871, Zero fails with:

      === Output from failing command(s) repeated here ===
      /usr/bin/printf "* For target hotspot_variant-zero_libjvm_objs_abstractCompiler.o:\n"
      * For target hotspot_variant-zero_libjvm_objs_abstractCompiler.o:
      (/bin/grep -v -e "^Note: including file:" < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_abstractCompiler.o.log || true) | /usr/bin/head -n 12
      In file included from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/barrierSet.hpp:31:0,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/collectorPolicy.hpp:28,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/genCollectedHeap.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/gcLocker.hpp:29,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/runtime/interfaceSupport.hpp:28,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/prims/methodHandles.hpp:32,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/ci/ciMethod.hpp:33,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/code/debugInfoRec.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/ci/ciEnv.hpp:31,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/ci/ciUtilities.hpp:28,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/ci/ciNullObject.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/ci/ciConstant.hpp:29,
      if test `/usr/bin/wc -l < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_abstractCompiler.o.log` -gt 12; then /bin/echo " ... (rest of output omitted)" ; fi
         ... (rest of output omitted)
      /usr/bin/printf "* For target hotspot_variant-zero_libjvm_objs_abstractInterpreter.o:\n"
      * For target hotspot_variant-zero_libjvm_objs_abstractInterpreter.o:
      (/bin/grep -v -e "^Note: including file:" < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_abstractInterpreter.o.log || true) | /usr/bin/head -n 12
      In file included from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/barrierSet.hpp:31:0,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/collectorPolicy.hpp:28,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/genCollectedHeap.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/oops/oop.inline.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/memory/metaspaceShared.hpp:32,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/interpreter/abstractInterpreter.cpp:36:
      /home/glaubitz/openjdk/hs/src/hotspot/share/oops/accessBackend.hpp:85:85: error: expected ‘{’ before ‘>’ token
         struct PossiblyLockedAccess: public IntegralConstant<bool, (sizeof(T) > 4)>::value> {};
                                                                                           ^
      if test `/usr/bin/wc -l < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_abstractInterpreter.o.log` -gt 12; then /bin/echo " ... (rest of output omitted)" ; fi
      /usr/bin/printf "* For target hotspot_variant-zero_libjvm_objs_accessBackend.o:\n"
      * For target hotspot_variant-zero_libjvm_objs_accessBackend.o:
      (/bin/grep -v -e "^Note: including file:" < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_accessBackend.o.log || true) | /usr/bin/head -n 12
      In file included from /home/glaubitz/openjdk/hs/src/hotspot/share/oops/accessBackend.inline.hpp:29:0,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/oops/accessBackend.cpp:26:
      /home/glaubitz/openjdk/hs/src/hotspot/share/oops/accessBackend.hpp:85:85: error: expected ‘{’ before ‘>’ token
         struct PossiblyLockedAccess: public IntegralConstant<bool, (sizeof(T) > 4)>::value> {};
                                                                                           ^
      if test `/usr/bin/wc -l < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_accessBackend.o.log` -gt 12; then /bin/echo " ... (rest of output omitted)" ; fi
      /usr/bin/printf "* For target hotspot_variant-zero_libjvm_objs_accessBarrierSupport.o:\n"
      * For target hotspot_variant-zero_libjvm_objs_accessBarrierSupport.o:
      (/bin/grep -v -e "^Note: including file:" < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_accessBarrierSupport.o.log || true) | /usr/bin/head -n 12
      In file included from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/barrierSet.hpp:31:0,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/collectorPolicy.hpp:28,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/genCollectedHeap.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/oops/oop.inline.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/classfile/javaClasses.inline.hpp:29,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/accessBarrierSupport.cpp:26:
      /home/glaubitz/openjdk/hs/src/hotspot/share/oops/accessBackend.hpp:85:85: error: expected ‘{’ before ‘>’ token
         struct PossiblyLockedAccess: public IntegralConstant<bool, (sizeof(T) > 4)>::value> {};
                                                                                           ^
      if test `/usr/bin/wc -l < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_accessBarrierSupport.o.log` -gt 12; then /bin/echo " ... (rest of output omitted)" ; fi
      /usr/bin/printf "* For target hotspot_variant-zero_libjvm_objs_accessFlags.o:\n"
      * For target hotspot_variant-zero_libjvm_objs_accessFlags.o:
      (/bin/grep -v -e "^Note: including file:" < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_accessFlags.o.log || true) | /usr/bin/head -n 12
      In file included from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/barrierSet.hpp:31:0,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/collectorPolicy.hpp:28,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/genCollectedHeap.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/oops/oop.inline.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/utilities/accessFlags.cpp:26:
      /home/glaubitz/openjdk/hs/src/hotspot/share/oops/accessBackend.hpp:85:85: error: expected ‘{’ before ‘>’ token
         struct PossiblyLockedAccess: public IntegralConstant<bool, (sizeof(T) > 4)>::value> {};
                                                                                           ^
      if test `/usr/bin/wc -l < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_accessFlags.o.log` -gt 12; then /bin/echo " ... (rest of output omitted)" ; fi
      /usr/bin/printf "* For target hotspot_variant-zero_libjvm_objs_adaptiveSizePolicy.o:\n"
      * For target hotspot_variant-zero_libjvm_objs_adaptiveSizePolicy.o:
      (/bin/grep -v -e "^Note: including file:" < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_adaptiveSizePolicy.o.log || true) | /usr/bin/head -n 12
      In file included from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/barrierSet.hpp:31:0,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/collectorPolicy.hpp:28,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/adaptiveSizePolicy.cpp:27:
      /home/glaubitz/openjdk/hs/src/hotspot/share/oops/accessBackend.hpp:85:85: error: expected ‘{’ before ‘>’ token
         struct PossiblyLockedAccess: public IntegralConstant<bool, (sizeof(T) > 4)>::value> {};
                                                                                           ^
      if test `/usr/bin/wc -l < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_adaptiveSizePolicy.o.log` -gt 12; then /bin/echo " ... (rest of output omitted)" ; fi
      /usr/bin/printf "* For target hotspot_variant-zero_libjvm_objs_adjoiningGenerations.o:\n"
      * For target hotspot_variant-zero_libjvm_objs_adjoiningGenerations.o:
      (/bin/grep -v -e "^Note: including file:" < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_adjoiningGenerations.o.log || true) | /usr/bin/head -n 12
      In file included from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/barrierSet.hpp:31:0,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/modRefBarrierSet.hpp:28,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/cardTableModRefBS.hpp:28,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/space.hpp:29,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/spaceDecorator.hpp:29,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/parallel/asPSYoungGen.hpp:34,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/parallel/adjoiningGenerations.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/parallel/adjoiningGenerations.cpp:26:
      /home/glaubitz/openjdk/hs/src/hotspot/share/oops/accessBackend.hpp:85:85: error: expected ‘{’ before ‘>’ token
         struct PossiblyLockedAccess: public IntegralConstant<bool, (sizeof(T) > 4)>::value> {};
                                                                                           ^
      if test `/usr/bin/wc -l < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_adjoiningGenerations.o.log` -gt 12; then /bin/echo " ... (rest of output omitted)" ; fi
      /usr/bin/printf "* For target hotspot_variant-zero_libjvm_objs_advancedThresholdPolicy.o:\n"
      * For target hotspot_variant-zero_libjvm_objs_advancedThresholdPolicy.o:
      (/bin/grep -v -e "^Note: including file:" < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_advancedThresholdPolicy.o.log || true) | /usr/bin/head -n 12
      In file included from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/barrierSet.hpp:31:0,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/collectorPolicy.hpp:28,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/genCollectedHeap.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/gcLocker.hpp:29,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/runtime/interfaceSupport.hpp:28,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/prims/methodHandles.hpp:32,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/ci/ciMethod.hpp:33,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/code/debugInfoRec.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/ci/ciEnv.hpp:31,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/ci/ciUtilities.hpp:28,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/ci/ciNullObject.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/ci/ciConstant.hpp:29,
      if test `/usr/bin/wc -l < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_advancedThresholdPolicy.o.log` -gt 12; then /bin/echo " ... (rest of output omitted)" ; fi
         ... (rest of output omitted)
      /usr/bin/printf "* For target hotspot_variant-zero_libjvm_objs_ageTable.o:\n"
      * For target hotspot_variant-zero_libjvm_objs_ageTable.o:
      (/bin/grep -v -e "^Note: including file:" < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_ageTable.o.log || true) | /usr/bin/head -n 12
      In file included from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/barrierSet.hpp:31:0,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/collectorPolicy.hpp:28,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/genCollectedHeap.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/oops/oop.inline.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/ageTable.inline.hpp:29,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/ageTable.cpp:27:
      /home/glaubitz/openjdk/hs/src/hotspot/share/oops/accessBackend.hpp:85:85: error: expected ‘{’ before ‘>’ token
         struct PossiblyLockedAccess: public IntegralConstant<bool, (sizeof(T) > 4)>::value> {};
                                                                                           ^
      if test `/usr/bin/wc -l < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_ageTable.o.log` -gt 12; then /bin/echo " ... (rest of output omitted)" ; fi
      /usr/bin/printf "* For target hotspot_variant-zero_libjvm_objs_allocation.o:\n"
      * For target hotspot_variant-zero_libjvm_objs_allocation.o:
      (/bin/grep -v -e "^Note: including file:" < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_allocation.o.log || true) | /usr/bin/head -n 12
      In file included from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/barrierSet.hpp:31:0,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/collectorPolicy.hpp:28,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/genCollectedHeap.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/memory/allocation.cpp:26:
      /home/glaubitz/openjdk/hs/src/hotspot/share/oops/accessBackend.hpp:85:85: error: expected ‘{’ before ‘>’ token
         struct PossiblyLockedAccess: public IntegralConstant<bool, (sizeof(T) > 4)>::value> {};
                                                                                           ^
      if test `/usr/bin/wc -l < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_allocation.o.log` -gt 12; then /bin/echo " ... (rest of output omitted)" ; fi
      /usr/bin/printf "* For target hotspot_variant-zero_libjvm_objs_arena.o:\n"
      * For target hotspot_variant-zero_libjvm_objs_arena.o:
      (/bin/grep -v -e "^Note: including file:" < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_arena.o.log || true) | /usr/bin/head -n 12
      In file included from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/barrierSet.hpp:31:0,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/collectorPolicy.hpp:28,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/gc/shared/genCollectedHeap.hpp:30,
                       from /home/glaubitz/openjdk/hs/src/hotspot/share/memory/arena.cpp:26:
      /home/glaubitz/openjdk/hs/src/hotspot/share/oops/accessBackend.hpp:85:85: error: expected ‘{’ before ‘>’ token
         struct PossiblyLockedAccess: public IntegralConstant<bool, (sizeof(T) > 4)>::value> {};
                                                                                           ^
      if test `/usr/bin/wc -l < /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_arena.o.log` -gt 12; then /bin/echo " ... (rest of output omitted)" ; fi
      /usr/bin/printf "\n* All command lines available in /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs.\n"

      * All command lines available in /home/glaubitz/openjdk/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs.
      /usr/bin/printf "=== End of repeated output ===\n"
      === End of repeated output ===

      This is fixed with:

      diff -r 1f77dcf5577e src/hotspot/os_cpu/linux_zero/os_linux_zero.cpp
      --- a/src/hotspot/os_cpu/linux_zero/os_linux_zero.cpp Tue Nov 21 13:48:28 2017 +0100
      +++ b/src/hotspot/os_cpu/linux_zero/os_linux_zero.cpp Tue Nov 21 15:10:33 2017 +0100
      @@ -372,7 +372,7 @@
         // The initial thread has a growable stack, and the size reported
         // by pthread_attr_getstack is the maximum size it could possibly
         // be given what currently mapped. This can be huge, so we cap it.
      - if (os::Linux::is_initial_thread()) {
      + if (os::is_primordial_thread()) {
           stack_bytes = stack_top - stack_bottom;
       
           if (stack_bytes > JavaThread::stack_size_at_create())

      However, the build then later fails with:

      === Output from failing command(s) repeated here ===
      /usr/bin/printf "* For target hotspot_variant-zero_libjvm_objs_os_linux_zero.o:\n"
      * For target hotspot_variant-zero_libjvm_objs_os_linux_zero.o:
      (/bin/grep -v -e "^Note: including file:" < /home/glaubitz/upstream/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_os_linux_zero.o.log || true) | /usr/bin/head -n 12
      /home/glaubitz/upstream/hs/src/hotspot/os_cpu/linux_zero/os_linux_zero.cpp: In function ‘void current_stack_region(u_char**, size_t*)’:
      /home/glaubitz/upstream/hs/src/hotspot/os_cpu/linux_zero/os_linux_zero.cpp:375:18: error: ‘is_initial_thread’ is not a member of ‘os::Linux’
         if (os::Linux::is_initial_thread()) {
                        ^~~~~~~~~~~~~~~~~
      if test `/usr/bin/wc -l < /home/glaubitz/upstream/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs/hotspot_variant-zero_libjvm_objs_os_linux_zero.o.log` -gt 12; then /bin/echo " ... (rest of output omitted)" ; fi
      /usr/bin/printf "\n* All command lines available in /home/glaubitz/upstream/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs.\n"

      * All command lines available in /home/glaubitz/upstream/hs/build/linux-x86_64-normal-zero-release/make-support/failure-logs.
      /usr/bin/printf "=== End of repeated output ===\n"
      === End of repeated output ===

      This in turn is fixed by:

      diff -r 1f77dcf5577e src/hotspot/share/oops/accessBackend.hpp
      --- a/src/hotspot/share/oops/accessBackend.hpp Tue Nov 21 13:48:28 2017 +0100
      +++ b/src/hotspot/share/oops/accessBackend.hpp Tue Nov 21 15:10:33 2017 +0100
      @@ -82,7 +82,7 @@
       #ifdef SUPPORTS_NATIVE_CX8
         struct PossiblyLockedAccess: public IntegralConstant<bool, false> {};
       #else
      - struct PossiblyLockedAccess: public IntegralConstant<bool, (sizeof(T) > 4)>::value> {};
      + struct PossiblyLockedAccess: public IntegralConstant<bool, (sizeof(T) > 4)> {};
       #endif
       
         template <DecoratorSet decorators, typename T>

            Assignee:
            John Paul Adrian Glaubitz
            Reporter:
            John Paul Adrian Glaubitz
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: