8191663: Zero variant broken after 8189170 and 8189871

Reviewed-by: eosterlund, coleenp